--- a/style.css
+++ b/style.css
@@ -55,6 +55,11 @@ p{
     font-weight: bolder;
 }
 
+.profileImg p{
+    font-family: cursive;
+    font-size: large;
+}
+
 .coder{
     display: flex;
     flex-direction: column;
@@ -79,6 +84,7 @@ p{
     justify-content: center;
     align-items: center;
     margin: auto;
+    flex-direction: column;
 }
 
 .skills h2{
@@ -86,7 +92,8 @@ p{
     text-align: center;
     justify-content: center;
     font-family: cursive;
-    font-weight: bold;
+    font-weight: bolder;
+    
 }
 
 .imgTitle{
@@ -101,13 +108,12 @@ p{
     flex-direction: column;
     align-items: center;
     background-image: linear-gradient(180deg, #26704b, #194b32);
-
 }
 
 .intro h1{
     font-family: cursive;
     margin-top: 40px;
-    color: #d0e4ae;
+    color: #ffffff;
     font-weight: bold;
 }
 
@@ -117,8 +123,12 @@ p{
     font-size: larger;
     margin-top: 12px;
     text-align: justify;
-    width: 90vw;
-    color: #d0e4ae;
+    width: 95vw;
+    color: #ffffff;
+    border-radius: 3px;
+    padding: 10px;
+    font-family: cursive;
+
 }
 
 .footerContent{
@@ -139,16 +149,45 @@ p{
     align-items: center;
 }
 
+.logoFooter p{
+    font-family: cursive;
+    font-size: large;
+}
+
 .about{
     justify-content: center;
 }
 
 .about h2{
     white-space: nowrap;
+    font-family: cursive;
+    font-weight: bold;
+}
+
+.about p{
+    font-family: cursive;
+    font-size: large;
+}
+
+.follow h2{
+    font-family: cursive;
+    font-weight: bold;
 }
 
 .follow p{
     white-space: nowrap;
+    font-family: cursive;
+    font-size: large;
+}
+
+.solutions h2{
+    font-family: cursive;
+    font-weight: bold;
+}
+
+.solutions p{
+    font-family: cursive;
+    font-size: large;
 }
 
 .coder{
