--- a/style.css
+++ b/style.css
@@ -44,13 +44,14 @@ p {
     height: 100%;
     text-align: center;
     justify-content: center;
-    width: auto;
+    width: 50%;
 }
 
 .profileImg img {
     margin-top: 45px;
     text-align: center;
     height: 100%;
+    width: 30%;
 }
 
 .profileImg h2 {
@@ -72,10 +73,6 @@ p {
 
 .coderContent {
     display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
     background-color: #d0e4ae;
     border-bottom: 1px solid #bed4c9;
 }
@@ -323,4 +320,15 @@ p {
 
 .front {
     background-image: linear-gradient(#26704b, #194b32);
+}
+
+/* Skills */
+@media (max-width: 360px) {
+    .imgTitle {
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        object-fit: cover;
+        grid-template-columns: repeat(6, 1fr);
+        display: grid;
+        background-color: red;
+    }
 }
