--- a/style.css
+++ b/style.css
@@ -63,6 +63,20 @@ nav {
   z-index: 1;
 }
 
+.dropdown-content .a[title]:hover:after {
+  content: attr(title);
+  background-color: #000;
+  color: #fff;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  white-space: nowrap;
+}
+
+
 /* Links inside the dropdown */
 .dropdown-content a {
   color: black;
@@ -108,6 +122,11 @@ p {
   text-align: center;
   width: 25vw;
   border-radius: 180px;
+}
+
+.profileImg img:hover {
+  transform: scale(1.2);
+  transition: transform 0.5s ease;
 }
 
 .profileImg h2 {
@@ -158,6 +177,11 @@ p {
   display: flex;
   margin-bottom: 20px;
   justify-content: center;
+}
+
+.skills .imgTitle :hover{
+  transform: scale(1.5);
+  transition: transform 0.5s ease;
 }
 
 .skills img {
@@ -255,6 +279,11 @@ p {
   white-space: nowrap;
   font-family: cursive sans-serif;
   font-size: large;
+}
+
+.followImg :hover{
+  transform: scale(1.3);
+  transition: transform 0.5s ease;
 }
 
 .solutions h2 {
